Remove redundant padding from reagent inputs and fix vertical clipping

--- a/src/index.css
+++ b/src/index.css
@@ -380,7 +380,9 @@ body {
   outline: none;
   color: var(--text-primary);
   width: 100%;
-  padding: var(--input-padding);
+  padding: 0;
+  margin: 0;
+  line-height: normal;
   box-sizing: border-box;
 }
 
@@ -446,6 +448,9 @@ body {
   font-size: 11px;
   flex-grow: 1;
   width: 100%;
+  padding: 0;
+  margin: 0;
+  line-height: normal;
 }
 
 .reagent-input:focus {
